OPSMN-4985: Fixed the form data overview widget to automatically choose the label/value alignment based on the number of fields with longer labels.
1. The label/value alignment is vertical if the form has more than 30% fields
   whose labels are greater than or equals 30 characters in length.

2. Otherwise the label/value alignment defaults to horizontal, the present setting.

3. Fixed the widget to display label/value in both vertical and horizontal layout.

--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -614,6 +614,32 @@ h4.os-sub-section-title, h5.os-sub-section-title, h6.os-sub-section-title {
   width: 50%;
 }*/
 
+.os-key-values.vertical .item {
+  padding-left: 0px;
+  width: 100%;
+}
+
+.os-key-values.vertical .item:after {
+  content: ' ';
+  display: inline-block;
+  border-bottom: 1px solid #ddd;
+  width: 100%;
+}
+
+.os-key-values.vertical .item:last-child:after {
+  width: 0%;
+}
+
+.os-key-values.vertical .item .key.key-sm {
+  margin-left: 0px;
+  width: 100%;
+}
+
+.os-key-values.vertical .item .key.key-sm.strong {
+  font-weight: 500;
+  font-style: italic;
+}
+
 .os-line-section >.key:after {
   content: '';
   display: block;
